--- a/MVCTravelBookingISE/appsettings.json
+++ b/MVCTravelBookingISE/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=LAPTOP-GKUBNKMU;Initial Catalog=TravelOnlineDb;Integrated Security=True"
+  },
   "AllowedHosts": "*"
+
 }
+
