--- a/MVCTravelBookingISE/MVCTravelBookingISE.csproj
+++ b/MVCTravelBookingISE/MVCTravelBookingISE.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Enums\" />
-    <Folder Include="Views\Flight\" />
+    <Folder Include="Models\Account\" />
   </ItemGroup>
 
 </Project>
