--- a/MVCTravelBookingISE/appsettings.json
+++ b/MVCTravelBookingISE/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=tcp:sqlconnecting.database.windows.net;Initial Catalog=master;Persist Security Info=False;User ID=MathildaK52;Password=***********;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnectionString": "Server=tcp:sqlconnecting.database.windows.net;Initial Catalog=master;Persist Security Info=False;User ID=MathildaK52;Password=************"
   },
   "AllowedHosts": "*"
 
