--- a/MVCTravelBookingISE/appsettings.json
+++ b/MVCTravelBookingISE/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "AuthDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MVCTravelBookingISE;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnectionString": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=master;Persist Security Info=True; User ID=MathildaK52;Password=***********"
+    "DefaultConnectionString": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=master;Persist Security Info=True; User ID=MathildaK52;Password=**********"
   },
   "AllowedHosts": "*"
 
