--- a/MVCTravelBookingISE/MVCTravelBookingISE.csproj
+++ b/MVCTravelBookingISE/MVCTravelBookingISE.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Enums\**" />
+    <Compile Remove="Models\Account\**" />
+    <Content Remove="Data\Enums\**" />
+    <Content Remove="Models\Account\**" />
+    <EmbeddedResource Remove="Data\Enums\**" />
+    <EmbeddedResource Remove="Models\Account\**" />
+    <None Remove="Data\Enums\**" />
+    <None Remove="Models\Account\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
@@ -16,11 +27,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Enums\" />
-    <Folder Include="Models\Account\" />
   </ItemGroup>
 
 </Project>
