--- a/MVCTravelBookingISE/Properties/launchSettings.json
+++ b/MVCTravelBookingISE/Properties/launchSettings.json
@@ -10,6 +10,7 @@
   "profiles": {
     "MVCTravelBookingISE": {
       "commandName": "Project",
+      "launchUrl": "FlightModels/Index",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7091;http://localhost:5091",
