--- a/MVCTravelBookingISE/appsettings.json
+++ b/MVCTravelBookingISE/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=TravelDb;Persist Security Info=True; User ID=MathildaK52;Password=Mathilda#$85"
-    //  "AuthDbContextConnection": "Server=sqlconnecting.database.windows.net;Database=TravelDb;Initial Catalog=TravelDb;Persist Security Info=True; User ID=MathildaK52;Password=Mathilda#$85"
+    "DefaultConnectionString": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=TravelDb;Persist Security Info=True; User ID=MathildaK52;Password=**********"
+    //  "AuthDbContextConnection": "Server=sqlconnecting.database.windows.net;Database=TravelDb;Initial Catalog=TravelDb;Persist Security Info=True; User ID=MathildaK52;Password=**********"
   },
   "AllowedHosts": "*"
-}
