--- a/MVCTravelBookingISE/appsettings.json
+++ b/MVCTravelBookingISE/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=TravelDb;Persist Security Info=True; User ID=MathildaK52;Password=**********"
-    //  "AuthDbContextConnection": "Server=sqlconnecting.database.windows.net;Database=TravelDb;Initial Catalog=TravelDb;Persist Security Info=True; User ID=MathildaK52;Password=**********"
+    "DefaultConnectionString": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=TravelDb;Persist Security Info=True;User ID=MathildaK52;Password=**********;"
+   
   },
   "AllowedHosts": "*"
+
+}
