--- a/MVCTravelBookingISE/MVCTravelBookingISE.csproj
+++ b/MVCTravelBookingISE/MVCTravelBookingISE.csproj
@@ -14,8 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Data\ViewModels\AccomodationInfoVModel.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="6.4.0" />
     <PackageReference Include="bootstrap" Version="5.2.1" />
+    <PackageReference Include="Microsoft.AspNet.SessionState.SessionStateModule" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
@@ -29,6 +35,18 @@
 
   <ItemGroup>
     <Folder Include="Data\Enums\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Data\ViewModels\AccomodationInfoVModel.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Data\ViewModels\AccomodationInfoVModel.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Data\ViewModels\AccomodationInfoVModel.cshtml" />
   </ItemGroup>
 
 </Project>
