--- a/MVCTravelBookingISE/appsettings.json
+++ b/MVCTravelBookingISE/appsettings.json
@@ -9,5 +9,9 @@
     "DefaultConnectionString": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=TravelSolutionDb;Persist Security Info=True;User ID=MathildaK52;Password=Admin624",
     "AuthDbContextConnection": "Data Source=sqlconnecting.database.windows.net;Initial Catalog=TravelSolutionDb;Persist Security Info=True;User ID=MathildaK52;Password=Admin624"
   },
+  "AmadeusAPI": {
+    "ApiKey": "ywPcynGYGHyjAfXNmpzA9RnZNDKGGiP6",
+    "ApiSecret": "nshKDozmQILqCYSr"
+  },
   "AllowedHosts": "*"
 }
