--- a/MVCTravelBookingISE/Properties/launchSettings.json
+++ b/MVCTravelBookingISE/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "launchUrl": "Home/Index",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7091;http://localhost:5091",
+      "applicationUrl": "https://localhost:7091;http://localhost:5091;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -26,4 +26,5 @@
       }
     }
   }
-}
+  
+  }
