Login working without email

--- a/MVCTravelBookingISE/appsettings.json
+++ b/MVCTravelBookingISE/appsettings.json
@@ -13,5 +13,8 @@
     "ApiKey": "ywPcynGYGHyjAfXNmpzA9RnZNDKGGiP6",
     "ApiSecret": "nshKDozmQILqCYSr"
   },
+  "SendGrid": {
+    "APIKey": ""
+  },
   "AllowedHosts": "*"
 }
